--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header>
-        <div class="line-header"></div>
         <div class="container header-area">
             <div class="header-left">
                 <img src="assets/images/logo.png" alt="Logo">
@@ -22,7 +21,7 @@
                     </button>
                 </form>
                 <div class="menu-toggle">
-                    ...
+                    <img src="assets/images/menu.png" alt="Menu">
                 </div>
             </div>
         </div>
