--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
             </div>
         </div>
     </header>
+    <section class="banner banner-top">
+        <div class="container">
+            <div class="body">
+                <h1>Starbucks® Happy Hour</h1>
+                <p>We’ll meet you in your inbox. Drink deals are on their way.</p>
+                <div class="thumbs">
+                    <img src="assets/images/c1.jpg" alt="Produto 1">
+                    <img src="assets/images/c2.jpg" alt="Produto 2">
+                    <img src="assets/images/c3.jpg" alt="Produto 3">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
