--- a/index.html
+++ b/index.html
@@ -39,5 +39,18 @@
             </div>
         </div>
     </section>
+    <section class="content content-left">
+        <div class="content-text">
+            <div class="body">
+                <div class="separator"></div>
+                <h2>Four Drinks, A Million Reasons </h2>
+                <em>"Just love yourself and you're set." – Lady Gaga</em>
+                <p>Lady Gaga and Starbucks share a mission: to build a kinder, braver world. Through the Born This Way Foundation, Lady Gaga has inspired her fans to embrace kindness in their communities—online and in the world. With your help, we can empower young people to spread more kindness.</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+        <div class="content-partial"></div>
+        <div class="content-image"></div>
+    </section>
 </body>
 </html>
