finalizando template starbucks

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
             </div>
         </div>
     </section>
+
     <section class="content content-left">
         <div class="content-text">
             <div class="body">
                 <div class="separator"></div>
-                <h2>Four Drinks, A Million Reasons </h2>
+                <h2>Four Drinks, A Million Reasons</h2>
                 <em>"Just love yourself and you're set." – Lady Gaga</em>
                 <p>Lady Gaga and Starbucks share a mission: to build a kinder, braver world. Through the Born This Way Foundation, Lady Gaga has inspired her fans to embrace kindness in their communities—online and in the world. With your help, we can empower young people to spread more kindness.</p>
                 <a href="#" class="btn">learn more</a>
@@ -52,5 +53,59 @@
         <div class="content-partial"></div>
         <div class="content-image"></div>
     </section>
+
+    <section class="content content-right">
+        <div class="content-text">
+            <div class="body">
+                <div class="separator"></div>
+                <h2>Introducing Vanilla Sweet Cream Cold Brew—Sweet, Creamy, Cold, Bold.</h2>
+                <p>Just before serving, our slow-steeped custom blend Starbucks® Cold Brew Coffee is topped with a delicate float of house-made vanilla sweet cream that cascades throughout the cup.</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+        <div class="content-partial"></div>
+        <div class="content-image"></div>
+    </section>
+
+    <section class="content content-left" id="new-caramel">
+        <div class="text-bg">
+            <div class="content-text">
+                <div class="body">
+                    <h2>The New Ultra Caramel Frappuccino Is Here!</h2>
+                    <p>Congrats on doing that thing! This calls for caramel. Lots of it. With cold brew whipped cream. The new Ultra Caramel Frappuccino is here!</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="content-image"></div>
+    </section>
+
+    <section class="content content-left" id="kindness">
+        <div class="text-bg">
+            <div class="content-text">
+                <div class="body">
+                    <div class="separator"></div>
+                    <h2>
+                        Kindness Starts<br>
+                        With A Cup
+                    </h2>
+                    <p>Introducing the Cups of Kindness collection: four very special drinks as delicious and refreshing as they are beautiful. Two new creations, Matcha Lemonade and Violet Drink, will join Pink Drink and Ombré Pink Drink as instant summer favorites.</p>
+                    <a href="#" class="btn">learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="content-image"></div>
+    </section>
+    
+    <section class="content content-full">
+        <div class="container content-bg"></div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-text">Sample footer text</div>
+            <div class="footer-rights">Template created with Nicepage and redesigned by Willian.</div>
+        </div>
+    </footer>
 </body>
 </html>
